# barbarosa

./: .gitignore  3x3.jl  3x3algebra.jl  Cargo.toml  README.md  barbarosa.jl  main.jl
3x3/: 3x3.jl  algebra.jl  algs.jl  main.jl  scrambler.jl
barbarosa/: Cargo.toml  README.md  hash.jl  mus_cache.jl
barbarosa/benches/: mod.rs
barbarosa/benches/cfop/: mod.rs
barbarosa/benches/solving/: mod.rs
barbarosa/src/: lib.rs  main.rs  prelude.rs
barbarosa/src/cube_n/: invariants.rs  mod.rs  search.rs  space.rs
barbarosa/src/cube_n/cube2/: mod.rs  test.rs
barbarosa/src/cube_n/cube3/: mod.rs  test.rs
barbarosa/src/cube_n/cube3/cfop/: cross.rs  mod.rs  test.rs
barbarosa/src/cube_n/cube3/heuristics/: manhattan.rs  mod.rs  mus.rs
barbarosa/src/cube_n/cube3/mus/: mod.rs
barbarosa/src/cube_n/cube3/mus/cache/: disk_storage.rs  generation.rs  mod.rs  test.rs
barbarosa/src/cube_n/cube3/mus/deindex/: implementations.rs  mod.rs  test.rs
barbarosa/src/cube_n/cube3/mus/index/: implementations.rs  mod.rs  test.rs
barbarosa/src/cube_n/cube4/: mod.rs  test.rs
barbarosa/src/cube_n/cube5/: mod.rs  test.rs
barbarosa/src/cube_n/cube6/: mod.rs  test.rs
barbarosa/src/cube_n/cube7/: mod.rs  test.rs
barbarosa/src/cube_n/moves/: amount.rs  extended.rs  mod.rs  non_redundant.rs  perms.rs  quarter.rs  rotation.rs  test.rs  wide.rs
barbarosa/src/cube_n/orientable/: mod.rs  orientation.rs  test.rs
barbarosa/src/cube_n/parser/: mod.rs  test.rs
barbarosa/src/cube_n/pieces/: corner.rs  edge.rs  mod.rs  test.rs  wing.rs
barbarosa/src/cube_n/pieces/center/: corner.rs  edge.rs  mod.rs  wing.rs
barbarosa/src/cube_n/pieces/wing/: test.rs
barbarosa/src/cube_n/space/: axis.rs  direction.rs  face.rs  mod.rs  test.rs
barbarosa/src/cube_n/visualization/: mod.rs  test.rs
barbarosa/src/cube_n/visualization/unfolded/: mod.rs  test.rs
barbarosa/src/generic/: alg.rs  mod.rs  moves.rs  parse.rs  scramble.rs  utils.rs
barbarosa/src/generic/piece/: mod.rs  set.rs  traits.rs
barbarosa/src/generic/search/: ida.rs  mod.rs  test.rs
barbarosa/src/grammar/: cube_n.pest
barbarosa/src/search/: test.rs
benches/: manhattan.rs  my_benchmark.rs
benches/solving/: manhattan.rs  mod.rs
search/: IDA*.jl  heuristics.jl
src/: lib.rs  main.jl  main.rs
src/3x3/: 3x3.jl  algs.jl  scrambler.jl
src/MUS/: cache.jl  dehash.jl  generation.jl  hash.jl  mus_cache.jl
src/cube3/: invariants.rs  mod.rs  space.rs  test.rs
src/cube3/heuristics/: manhattan.rs  mod.rs  mus.rs
src/cube3/moves/: alg.rs  mod.rs  test.rs
src/cube3/mus/: mod.rs
src/cube3/mus/cache/: disk_storage.rs  generation.rs  mod.rs
src/cube3/mus/deindex/: implementations.rs  mod.rs  test.rs
src/cube3/mus/index/: implementations.rs  mod.rs  test.rs
src/cube3/piece/: corner.rs  edge.rs  mod.rs
src/cube3/pieces/: mod.rs
src/cube3/random/: mod.rs
src/cube_n/: invariants.rs  mod.rs  space.rs
src/cube_n/cube2/: mod.rs  test.rs
src/cube_n/cube3/: invariants.rs  mod.rs  test.rs
src/cube_n/cube3/heuristics/: manhattan.rs  mus.rs
src/cube_n/cube3/mus/cache/: disk_storage.rs  generation.rs  mod.rs
src/cube_n/cube3/mus/deindex/: implementations.rs  mod.rs  test.rs
src/cube_n/cube3/mus/index/: mod.rs  test.rs
src/cube_n/cube4/: mod.rs  test.rs
src/cube_n/cube5/: mod.rs  test.rs
src/cube_n/cube6/: mod.rs  test.rs
src/cube_n/cube7/: mod.rs  test.rs
src/cube_n/moves/: amount.rs  mod.rs  perms.rs  rotation.rs  test.rs  wide.rs
src/cube_n/pieces/: center.rs  corner.rs  edge.rs  mod.rs  wing.rs
src/cube_n/pieces/center/: corner.rs  edge.rs  mod.rs  wing.rs
src/cube_n/pieces/wing/: test.rs
src/generic/: alg.rs  mod.rs  moves.rs  parse.rs  pieces.rs  scramble.rs  utils.rs
src/search/: IDA*.jl  heuristics.jl  heuristics.rs  mod.rs  test.rs
tests/: 3x3.test.jl  IDA*.test.jl  MUS.test.jl  barbarosa.test.jl  hash.test.jl  main.jl  main.test.jl  scrambler.jl  scrambler.test.jl  search.test.jl  tests.jl
