[package]
name = "barbarosa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
strum = { version = "0.24", features = ["derive"] }
nalgebra = "0.32.1"
once_cell = "1.17.1"
thiserror = "1.0.40"
enum_dispatch = "0.3.11"
rand = "0.8.5"
itertools = "0.10.5"
pathfinding = "4.3.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
