[package]
name = "barbarosa"
version = "0.1.0"
edition = "2021"
description = "A Rubik's cube library "
readme = "README.md"
repository = "https://github.com/Odilf/barbarosa"
license = "GPL-3.0-or-later"
keywords = ["rubik", "cube", "3x3", "3x3x3", "cubing", "speedcubing", "twisty-puzzle", "twisty", "puzzle", "solver", "algorithm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.24", features = ["derive"] }
nalgebra = "0.32.1"
once_cell = "1.17.1"
thiserror = "1.0.40"
enum_dispatch = "0.3.11"
rand = "0.8.5"
itertools = "0.10.5"
pathfinding = "4.3.0"
const_format = "0.2.31"
chrono = "0.4.26"
rayon = "1.7.0"
clap = { version = "4.3.4", features = ["derive"] }
rand_derive2 = "0.1.20"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "mod"
harness = false

[profile.release]
debug = true
